# tItau

./: README.md  app.py  data_adjust.ipynb  pyproject.toml
.ipynb_checkpoints/: data_adjust-checkpoint.ipynb
bases/: media_preco.csv
tests/: test_titau.py
titau/: .#model.py  __init__.py  __init__.py~  api.py  model.py  model.py~
titau/.ipynb_checkpoints/: data_adjust-checkpoint.ipynb
