[tool.poetry]
name = "tItau"
version = "0.1.0"
description = ""
authors = ["Marcio M. <marcio.mendonca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
flask = "^1.1.2"
ipython = "^7.17.0"
jupyter = "^1.0.0"
sqlalchemy = "^1.3.18"
flask-sqlalchemy = "^2.4.4"
flask-restx = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
